--- a/Web/Bookworm.Web/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/_ViewImports.cshtml
@@ -2,6 +2,6 @@
 @using Bookworm.Web.ViewModels
 @using Bookworm.Web.ViewModels.Users;
 @using Bookworm.Web.ViewModels.Books;
-@using Bookworm.Web.ViewModels.Quotes;
+@using Bookworm.Web.ViewModels.Quotes.Models;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Bookworm.Web
