--- a/Web/Bookworm.Web/Views/_ViewImports.cshtml
+++ b/Web/Bookworm.Web/Views/_ViewImports.cshtml
@@ -8,7 +8,8 @@
 @using Bookworm.Web.ViewModels.Books
 @using Bookworm.Web.ViewModels.Comments
 @using Bookworm.Web.ViewModels.Users
-@using Bookworm.Web.ViewModels.Quotes.UploadQuoteViewModels;
+@using Bookworm.Web.ViewModels.Quotes.Models;
+@using Bookworm.Web.ViewModels.Quotes.Models.UploadQuoteViewModels;
 @using Bookworm.Common.Enums;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Bookworm.Web
