--- a/Web/Bookworm.Web/Views/Quote/UserQuotes.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/UserQuotes.cshtml
@@ -22,7 +22,7 @@ else
     <partial name="PartialViews/Quotes/_QuotesSearchPartial" />
 
     <div class="table-responsive my-3">
-        <table class="table table-bordered table-hover">
+        <table class="table table-bordered table-hover fs-5">
             <thead>
                 <tr>
                     <th class="text-center align-middle" scope="col">Content</th>
