Add initial edit quote functionality

--- a/Web/Bookworm.Web/Views/Home/Index.cshtml
+++ b/Web/Bookworm.Web/Views/Home/Index.cshtml
@@ -45,7 +45,7 @@
             </a>
         </div>
         <div>
-            <a asp-controller="Quote" asp-action="Upload" class="btn button btn-lg">
+            <a asp-controller="UploadQuote" asp-action="Upload" class="btn button btn-lg">
                 Upload Quote
             </a>
         </div>
