--- a/Web/Bookworm.Web/Views/_ViewImports.cshtml
+++ b/Web/Bookworm.Web/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Bookworm.Web
 @using Bookworm.Common
 @using Bookworm.Web.ViewModels.Home
+@using Bookworm.Data.Models.Enums
 @using Bookworm.Web.ViewModels
 @using Bookworm.Web.ViewModels.Quotes
 @using Bookworm.Web.ViewModels.Categories
@@ -8,7 +9,6 @@
 @using Bookworm.Web.ViewModels.Books
 @using Bookworm.Web.ViewModels.Comments
 @using Bookworm.Web.ViewModels.Users
-@using Bookworm.Web.ViewModels.Quotes.EditQuoteViewModels
 @using Bookworm.Web.ViewModels.Quotes.ListingViewModels
 @using Bookworm.Web.ViewModels.Quotes.UploadQuoteViewModels
 @using Bookworm.Common.Enums;
