--- a/Web/Bookworm.Web/Views/Quote/Edit.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/Edit.cshtml
@@ -1,54 +1,62 @@
-﻿@model EditQuoteViewModel
+﻿@model EditQuoteInputModel
 
 @{
     this.ViewData["Title"] = "Edit Quote";
     this.ViewData["Icon-Class"] = "fas fa-pen icon ms-3";
-    var action = this.ViewData["ActionName"];
 }
 
 <partial name="PartialViews/_TitleCardPartial" />
 
-<form asp-controller="Quote" asp-action="Edit" class="col-6 mx-auto d-flex justify-content-center flex-column mt-3 mb-5">
-    <input type="hidden" asp-for="Type" value="@Model.Type"/>
-    <div class="form-group justify-content-center">
-        <label asp-for="@Model.Content"><strong>Content*</strong></label>
-        <textarea asp-for="@Model.Content" class="form-control border border-2 fs-5" rows="6"></textarea>
-        <span asp-validation-for="@Model.Content" class="text-danger"></span>
-    </div>
+<div class="editQuoteContainer">
+    <form asp-controller="Quote" asp-action="Edit" class="editQuoteForm">
 
-    @if (Model.Type == QuoteType.GeneralQuote)
-    {
-        <div class="form-group my-3">
-            <label asp-for="@Model.AuthorName"><strong>Author's Name*</strong></label>
-            <input value="@Model.AuthorName" asp-for="@Model.AuthorName" type="text" class="form-control border border-2 fs-5">
-            <span asp-validation-for="@Model.AuthorName" class="text-danger"></span>
-        </div>
-    }
-    else if (Model.Type == QuoteType.BookQuote)
-    {
-        <div class="form-group my-3">
-            <label asp-for="@Model.BookTitle"><strong>Book Title*</strong></label>
-            <input asp-for="@Model.BookTitle" value="@Model.BookTitle" type="text" class="form-control border border-2 fs-5">
-            <span asp-validation-for="@Model.BookTitle" class="text-danger"></span>
-        </div>
-        <div class="form-group my-3">
-            <label asp-for="@Model.AuthorName"><strong>Author's Name*</strong></label>
-            <input value="@Model.AuthorName" asp-for="@Model.AuthorName" type="text" class="form-control border border-2 fs-5">
-            <span asp-validation-for="@Model.AuthorName" class="text-danger"></span>
-        </div>
-    }
-    else if (Model.Type == QuoteType.MovieQuote)
-    {
-        <div class="form-group my-3">
-            <label asp-for="@Model.MovieTitle"><strong>Movie Title*</strong></label>
-            <input asp-for="@Model.MovieTitle" value="@Model.MovieTitle" type="text" class="form-control border border-2 fs-5">
-            <span asp-validation-for="@Model.MovieTitle" class="text-danger"></span>
-        </div>
-    }
+        <div asp-validation-summary="All" class="text-danger"></div>
 
-    <div class="text-center mt-3">
-        <button type="submit" class="btn button text-center form-button fs-5 px-5">
-            <strong>Edit</strong>
-        </button>
-    </div>
-</form>
+        <input type="hidden" asp-for="Type" value="@Model.Type" />
+
+        <div class="form-group justify-content-center">
+            <label asp-for="@Model.Content"><strong>Content</strong></label>
+            <textarea asp-for="@Model.Content" class="form-control" rows="6"></textarea>
+            <span asp-validation-for="@Model.Content" class="text-danger"></span>
+        </div>
+
+        @if (Model.Type == QuoteType.GeneralQuote.ToString())
+        {
+            <div class="form-group my-3">
+                <label asp-for="@Model.AuthorName"><strong>Author's Name</strong></label>
+                <input value="@Model.AuthorName" asp-for="@Model.AuthorName" type="text" class="form-control">
+                <span asp-validation-for="@Model.AuthorName" class="text-danger"></span>
+            </div>
+        }
+        else if (Model.Type == QuoteType.BookQuote.ToString())
+        {
+            <div class="form-group">
+                <label asp-for="@Model.BookTitle"><strong>Book Title</strong></label>
+                <input asp-for="@Model.BookTitle" value="@Model.BookTitle" type="text" class="form-control">
+                <span asp-validation-for="@Model.BookTitle" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="@Model.AuthorName"><strong>Author's Name</strong></label>
+                <input value="@Model.AuthorName" asp-for="@Model.AuthorName" type="text" class="form-control">
+                <span asp-validation-for="@Model.AuthorName" class="text-danger"></span>
+            </div>
+        }
+        else if (Model.Type == QuoteType.MovieQuote.ToString())
+        {
+            <div class="form-group my-3">
+                <label asp-for="@Model.MovieTitle"><strong>Movie Title</strong></label>
+                <input asp-for="@Model.MovieTitle" value="@Model.MovieTitle" type="text" class="form-control">
+                <span asp-validation-for="@Model.MovieTitle" class="text-danger"></span>
+            </div>
+        }
+
+        <div class="editQuoteFormBtnContainer mt-3">
+            <button type="submit" class="btn">
+                Edit<i class="fa fa-square-pen ms-2"></i>
+            </button>
+        </div>
+
+    </form>
+</div>
+
