--- a/Web/Bookworm.Web/Views/Shared/PartialViews/Modals/_DeleteQuoteModalPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/Modals/_DeleteQuoteModalPartial.cshtml
@@ -1,18 +1,23 @@
-﻿<div class="modal fade" id="deleteQuoteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+﻿<div class="modal fade"
+     id="deleteQuoteModal"
+     tabindex="-1"
+     aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h1 class="modal-title fs-5" id="exampleModalLabel">Delete quote</h1>
-                <button type="button" class="btn-modal-close" data-bs-dismiss="modal" aria-label="Close"><i class="fa-solid fa-x"></i></button>
+                <i class="fa-solid fa-x btn-modal-close" data-bs-dismiss="modal" aria-label="Close"></i>
             </div>
-            <div class="modal-body">
+            <div class="modal-body text-center fs-5">
                 Are you sure you want to delete this quote?
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
                 <form method="post" asp-controller="Quote" asp-action="Delete">
-                    <input type="hidden" name="quoteId" class="modelIdInput" value="" />
-                    <button type="submit" class="btn btn-danger">Delete</button>
+                    <input type="hidden" name="quoteId" class="quoteIdInput" value="" />
+                    <button type="submit" class="btn btn-danger btn-lg border-2 border-dark px-5">
+                        Delete<i class="fa fa-trash-can ms-2"></i>
+                    </button>
                 </form>
             </div>
         </div>
