--- a/Web/Bookworm.Web/Views/Shared/PartialViews/Quotes/_QuotesStatusFilterPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/Quotes/_QuotesStatusFilterPartial.cshtml
@@ -8,7 +8,7 @@
            autocomplete="off">
     <label class="btn border-dark border-2 fs-5"
            for="approvedQuotesRadio">
-        Show only approved quotes - @Model.ApprovedQuotesCount
+        Show only approved quotes
     </label>
 
     <input type="radio"
@@ -18,6 +18,6 @@
            autocomplete="off">
     <label class="btn border-dark border-2 fs-5"
            for="unapprovedQuotesRadio">
-        Show only unapproved quotes - @Model.UnapprovedQuotesCount
+        Show only unapproved quotes
     </label>
 </div>
