--- a/Web/Bookworm.Web/Views/_ViewImports.cshtml
+++ b/Web/Bookworm.Web/Views/_ViewImports.cshtml
@@ -10,7 +10,7 @@
 @using Bookworm.Web.ViewModels.Comments
 @using Bookworm.Web.ViewModels.Users
 @using Bookworm.Web.ViewModels.Quotes.ListingViewModels
-@using Bookworm.Web.ViewModels.Quotes.UploadQuoteViewModels
+@using Bookworm.Web.ViewModels.Quotes.QuoteInputModels
 @using Bookworm.Common.Enums;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Bookworm.Web
