--- a/Web/Bookworm.Web/Areas/Admin/Views/Quote/UnapprovedQuotes.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/Quote/UnapprovedQuotes.cshtml
@@ -2,129 +2,17 @@
 
 @{
     ViewData["Title"] = "Unapproved Quotes";
+    ViewData["Area"] = "admin";
 }
 
-@if (Model.Quotes.Count == 0)
-{
-    <h3 class="text-center pt-5 display-3">There are no unapproved quotes!</h3>
-}
-else
-{
-    <h3 class="text-center pt-5">Manage unapproved quotes!</h3>
-    
-        <table class="table table-striped table-dark table-bordered table-hover" id="dataTable">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Quote</th>
-                    <th class="text-center" scope="col">Author</th>
-                    <th class="text-center" scope="col">Book</th>
-                    <th class="text-center" scope="col">Movie</th>
-                    <th class="text-center" scope="col">Approve</th>
-                    <th class="text-center" scope="col">Delete</th>
-                </tr>
-            </thead>
-            <tbody>
-                @for (int i = 0; i <= Model.Quotes.Count() - 1; i++)
-                {
-                    <tr>
-                        <th scope="row" class="text-center align-middle">@(i + 1)</th>
-                        <td class="align-middle">@Model.Quotes[i].Content</td>
-                        @if (Model.Quotes[i].AuthorName != null)
-                        {
-                            <td class="text-center align-middle">@Model.Quotes[i].AuthorName</td>
-                        }
-                        else
-                        {
-                            <td class="text-center align-middle"><i class="fa-solid fa-minus fa-xl"></i></td>
-                        }
-                        @if (Model.Quotes[i].BookTitle != null)
-                        {
-                            <td class="text-center align-middle">@Model.Quotes[i].BookTitle</td>
-                        }
-                        else
-                        {
-                            <td class="text-center  align-middle"><i class="fa-solid fa-minus fa-xl"></i></td>
-                        }
-                        @if (Model.Quotes[i].MovieTitle != null)
-                        {
-                            <td class="text-center  align-middle">@Model.Quotes[i].MovieTitle</td>
-                        }
-                        else
-                        {
-                            <td class="text-center align-middle"><i class="fa-solid fa-minus fa-xl"></i></td>
-                        }
-                        <td class="text-center align-middle">
-                            <a class="btn btn-success modalBtn" data-model-id="@Model.Quotes[i].Id" data-bs-toggle="modal" data-bs-target="#approveQuoteModal">
-                                <i class="fa-solid fa-circle-check fa-xl px-2"></i>
-                            </a>
-                        </td>
-                        <td class="text-center align-middle">
-                            <a class="btn btn-danger modalBtn" data-model-id="@Model.Quotes[i].Id" data-bs-toggle="modal" data-bs-target="#deleteQuoteModal">
-                                <i class="fa-solid fa-trash-can fa-xl px-2"></i>
-                            </a>
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
+<partial name="PartialViews/_AdminQuotesPartial" />
 
-}
+<partial name="PartialViews/Modals/_ApproveQuoteModalPartial" />
 
-<!-- Approve Quote Modal -->
-<div
-    class="modal fade"
-    id="approveQuoteModal"
-    tabindex="-1"
-    aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Approve quote</h1>
-            </div>
-            <div class="modal-body">
-                <strong>Are you sure you want to approve this quote?</strong>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
-                <form method="post" asp-area="admin" asp-controller="Quote" asp-action="ApproveQuote">
-                    <input type="hidden" name="quoteId" class="modelIdInput" value="" />
-                    <button type="submit" class="btn btn-danger">Approve</button>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
+<partial name="PartialViews/Modals/_DeleteQuoteModalPartial" />
 
-<!-- Delete Quote Modal -->
-<div
-    class="modal fade"
-    id="deleteQuoteModal"
-    tabindex="-1"
-    aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Delete quote</h1>
-            </div>
-            <div class="modal-body">
-                <strong>Are you sure you want to delete this quote?</strong>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
-                <form method="post" asp-area="admin" asp-controller="Quote" asp-action="Delete">
-                    <input type="hidden" name="quoteId" class="modelIdInput" value="" />
-                    <button type="submit" class="btn btn-danger">Delete</button>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
-
-@section Scripts{
+@section Scripts {
     <script src="~/js/modal.js"></script>
-    <script src="~/lib/datatables.net/jquery.dataTables.min.js"></script>
     <script src="~/js/datatable.js"></script>
+    <script src="~/lib/datatables.net/jquery.dataTables.min.js"></script>
 }
