--- a/Web/Bookworm.Web/Views/Shared/PartialViews/Modals/_DeleteQuoteModalPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/Modals/_DeleteQuoteModalPartial.cshtml
@@ -1,4 +1,8 @@
-﻿<div class="modal fade"
+﻿@{
+    var area = ViewData["Area"];
+}
+
+<div class="modal fade"
      id="deleteQuoteModal"
      tabindex="-1"
      aria-labelledby="exampleModalLabel"
@@ -13,8 +17,8 @@
                 Are you sure you want to delete this quote?
             </div>
             <div class="modal-footer">
-                <form method="post" asp-controller="Quote" asp-action="Delete">
-                    <input type="hidden" name="quoteId" class="quoteIdInput" value="" />
+                <form method="post" asp-area=@area asp-controller="Quote" asp-action="Delete">
+                    <input type="hidden" name="quoteId" class="deleteQuoteIdInput" value="" />
                     <button type="submit" class="btn btn-danger btn-lg border-2 border-dark px-5">
                         Delete<i class="fa fa-trash-can ms-2"></i>
                     </button>
