--- a/Web/Bookworm.Web/Views/Shared/PartialViews/_ToastNotificationPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/_ToastNotificationPartial.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-<div class="toast-container position-fixed top-0 end-0 p-3">
+<div class="toast-container position-fixed top-0 end-0 p-3 fs-5">
     <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header @toastHeaderClass">
             <strong class="me-auto">@toastTitle</strong>
